--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Less/Site/_TheThemeMachine-Bootstrap-Navigation.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Less/Site/_TheThemeMachine-Bootstrap-Navigation.less
@@ -1,5 +1,4 @@
-﻿@import '../Bootstrap/variables.less';
-/* 
+﻿/* 
     Somes classes really need to be in the markup 
     for bootstrap selectors to work.
 */
