Lighten the layout wrapper class/id.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceTheme.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceTheme.less
@@ -67,6 +67,7 @@ Author: shaun @ bigfont.ca
     &:before {
         .show-id;
         .show-class;
+        background:lighten(@other-highlight, 25);
         position: absolute;
         top: 50px;
         right: 50px;
