--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/theme-designer.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/theme-designer.less
@@ -1,3 +1,4 @@
-﻿@import 'less/_mixins.less';
+﻿@import 'less/bootstrap/_mixins.less';
+@import 'less/_Variables.less';  
 @import 'less/_TraceTheme.less';
-@import 'less/_TraceThemeControls.less';                                               
+@import 'less/_TraceThemeControls.less';
