--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/theme-designer.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/theme-designer.css
@@ -2,8 +2,6 @@
 Theme: The Theme Machine Designer
 Author: shaun @ bigfont.ca 
 */
-/*topo*/
-/*links*/
 /*mixins*/
 #layout-wrapper.trace-class-and-id .show-id {
   content: '#' attr(id);
@@ -200,35 +198,35 @@ Author: shaun @ bigfont.ca
 #layout-wrapper.trace-topography > [class] > [class] > [class] > [class] > [class] > [class] {
   background-color: #e6e6e6 !important;
 }
-html {
-  margin-top: 45px;
-}
+/*html {
+    margin-top: @control-bar-height + 5px !important;
+}*/
 #theme-designer-control-bar {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  background-image: -webkit-linear-gradient(top, #ecf1f2 0%, #fafbfb 100%);
-  background-image: linear-gradient(to bottom, #ecf1f2 0%, #fafbfb 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffecf1f2', endColorstr='#fffafbfb', GradientType=0);
-  border-bottom: 1px solid #b6bcbd;
-  color: #000000;
-  height: 40px;
   left: 0;
-  overflow: hidden;
-  padding: 1px 0;
   position: fixed;
   top: 0;
-  width: 100%;
   z-index: 99999;
+}
+#theme-designer-control-bar > form {
+  background: #e8e6e6;
+  opacity: 0.1;
+  filter: alpha(opacity=10);
+  color: #000000;
+  margin: 5px;
+  overflow: hidden;
+  padding: 5px;
+  border-radius: 4px;
+}
+#theme-designer-control-bar:hover > form {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
 }
 #theme-designer-control-bar label,
 #theme-designer-control-bar input,
 #theme-designer-control-bar button,
 #theme-designer-control-bar select {
   display: inline;
-  margin: 0 0 0 5px;
-  line-height: 40px;
+  margin: 0 2.5px;
   vertical-align: middle;
   width: auto;
 }
