Add a bootstrap menu item for dropdowns.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/MenuItem.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/MenuItem.cshtml
@@ -34,7 +34,7 @@
 
             if (items.Any())
             {
-                <ul>
+                <ul class="dropdown-menu">
                     @DisplayChildren(Model)
                 </ul>
             }
