--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
@@ -6,10 +6,10 @@
     border-radius: @border-radius;
     color: @font-color;
     cursor: move;
-    left: 0;
+    left: 5px;
     padding-left: @icon-width;
     position: fixed;
-    top: 0;
+    top: 5px;
     z-index: @massive-z-index;
 
     & > form {
