--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/TraceThemeWrapper.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/TraceThemeWrapper.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     // The purpose of this wrapper is simply to add JavaScript and CSS.
     // We add CSS through JavaScript.    
+    Script.Require("jQuery");
     Script.Include("JSON2.js").AtFoot();
     Script.Include("CssLoader.js").AtFoot();
     Script.Include("DragAndDrop.js").AtFoot();
